config/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-info-app
  labels:
    app: k8s-info
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-info
  template:
    metadata:
      labels:
        app: k8s-info
    spec:
      containers:
        - name: k8s-info-container
          image: k8s-info-app:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
