config/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-info-service
  labels:
    app: k8s-info
spec:
  selector:
    app: k8s-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
