config/app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-info-ingress
  labels:
    app: k8s-info
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: placeholder.bteam.dev  # This will be patched by overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-info-service
                port:
                  number: 80
