config/app/base/k8s-info-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-info-app
  labels:
    app: k8s-info
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-info
  template:
    metadata:
      labels:
        app: k8s-info
    spec:
      containers:
        - name: k8s-info-container
          image: k8s-info-app:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-info-service
spec:
  selector:
    app: k8s-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-info-ingress
  # namespace: dev-feature1-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev-feature1.bteam.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-info-service
                port:
                  number: 80
